# SVP-CIM

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  svp50_shortest_norms.csv  svp_cim.py
CPM/: CAC_Potts.py  INFORMATION.txt  simcpm.py
EXTRA_INFO/: MANUAL_INSTALL.txt  check_modules.py  requirements.txt
MSc Thesis - DATA/: INFORMATION.txt
MSc Thesis - DATA/CIM Optimisation Sec. 3.1/1st & 2nd Figures/: Big_Heatmaps.py  Histogram.py  Small_Heatmaps.py
MSc Thesis - DATA/Sec. 2/: Potts_Explain.py
ORIGINAL_OPTIMISATION/1st_OPT/: sweep_X5.csv  sweep_X8.csv  sweep_all_dims.csv
ORIGINAL_OPTIMISATION/2nd_OPT(X=5)/: manifest.yaml
ORIGINAL_OPTIMISATION/3rd_OPT(X=5)/: manifest.yaml
cim_svp/: README.md  __init__.py  cimwrap.py  cpmwrap.py  hotpatch.py  io.py  maths.py  plots.py  progress.py  random.py  result_io.py
cim_svp/extras/: classical_solvers.py  encoding.py  prune.py  scale.py
cim_svp/utils/: timeouts.py
scripts/: Batch_Solve_CPM.py  optimise_cim_static.py  sweep_cim_static_dims.py
scripts/EXPERIMENTAL SCRIPTS/: 5_Batch_Solve_CPM.py  SVP_search_basis.py
scripts/FUTURE SIMULATIONS/: cim_physics_study.py  landscape_diagnostic_of_X20.py
scripts/LESS OLD/: PostProcessor.py  greedy_Hypersweep.py  run_cim_greedy_x5.py
scripts/OLD/: CIM_Performance.py  CIM_Performance_worst_case.py
tests/: AHD_test.py  conftest.py  prune_test.py  svp_cim_test.py  test_encoding.py  test_extract_cim.py  test_optimise_logic.py  test_parallel_safety.py  test_plots.py  test_results_io.py  test_scale.py  tests_classical_solvers.py
(+2717 files in other folders)
